Se ha agregado el proceso de la creacion de transiciones con mattes, 13 de Marzo del 2019

--- a/00_Tutoriales/Canales de interes y desarrollo.html
+++ b/00_Tutoriales/Canales de interes y desarrollo.html
@@ -31,7 +31,9 @@ Cherru (35 videos)
 	https://www.youtube.com/watch?v=sWOAD99kIYI&list=PLV_RWO0zO9uDvcuFoDXOX-T2WHxtbLJxy
 
 	
-
+RafaelTaleroFX (11 videos)
+	https://www.youtube.com/watch?v=UzL-irfB2B0&list=PL4zLx6h1F13xtC_OAMljKmlBi_srVn5Lt
+ 
 
 	
 
