Se han actualizado los shorcuts, entre otros procesos como los multicamara y creacion de plantillas de texto de after effects, 18 de Marzo del 2019

--- a/01_Shortcuts/ShortCuts.html
+++ b/01_Shortcuts/ShortCuts.html
@@ -41,11 +41,20 @@ _____________________________
 
 		_Rango Invertido: X (invierte la selección del rango seleccionado previamente, cuando el cabezal esta fuera del rango seleccionado previamente)
 
+		_New Project: Control + Alt + N
+
+		_New Secuence: Control + N
+
+		_New Title: Control + T
+
+
 
 	Interface:
 	__________
 
-		Fullframe panel: \º
+		_Fullframe panel: \º
+
+		_New Bin/Folder: Control + B
 
 
 
@@ -68,9 +77,9 @@ _____________________________
 
 		_Next/Prev 5 Frame: Shift + Left/Right Arrows Keyboard
 
-		_Inicio: inicio/home (ir al inicio del timeline)
+		_Inicio: inicio/home ó Shift + I, (ir al inicio del timeline)
 
-		_Fin: fin/end (ir al final del timeline)
+		_Fin: fin/end ó Shift + O, (ir al final del timeline)
 
 		_Next/Prev clip: keyboard arrow Up/Down
 
@@ -124,6 +133,8 @@ _____________________________
 
 		_Cut Clip Pre/Post: Q/W (eliminar la parte anterior ó posterior de clip, en relación a la posición del cabezal del timeline, sobre el clip, seleccionado respectivo)
 
+		_Crear SubCLip: Control + U
+
 
 	Edición en el viewer:
 	_____________________
@@ -169,21 +180,25 @@ _____________________________
 		más respetando la posición y duración del click, existente
 
 
-		4_ampliación de la visualización ó ancho de una secuencia en su canal de video para poder ver así, las tumbs, y detalles de fotogramas: (idioma en ingles)
+		4_ampliación de la visualización ó ancho de una secuencia tanto en su canales de video como en sus canales de audio 
+		
+		_para poder ver así, las tumbs, y detalles de fotogramas: (idioma en ingles)
 
-			4.1_Zoom in/out: Shift + ?/¿	
+			4.1_Zoom in/out: Shift + ?/¿
+			
 
+		5_ampliación de la visualización ó ancho de una secuencia en sus canales de audio solamente 
+		
+		_para poder ver así, el espectro de audio, y detalles de fotogramas: (idioma en ingles)
 
-		4_ampliación de la visualización ó ancho de una secuencia en su canal de audio para poder ver así, el espectro de audio, y detalles de fotogramas: (idioma en ingles)
+			5.1_Zoom in/out: Alt + ?/¿
+			
 
-			4.1_Zoom in/out: Alt + ?/¿
+		6_ajuste del workarea de edición en una secuencia:
 
+			6.1_ In point:  Alt/Alt2 + [
 
-		5_ajuste del workarea de edición en una secuencia:
-
-			5.1_ In point:  Alt/Alt2 + [
-
-			5.2_ Out point: Alt/Alt2 + ]
+			6.2_ Out point: Alt/Alt2 + ]
 
 
 
