se han actualizado los shortcuts, subtitulos, scopes, otros, 19 de Marzo del 2019

--- a/01_Shortcuts/ShortCuts.html
+++ b/01_Shortcuts/ShortCuts.html
@@ -132,6 +132,10 @@ _____________________________
 	Tools:
 	______
 
+		Edítalo Tú: Herramientas de Adobe Premiere Pro CC 2017
+			https://www.youtube.com/watch?v=vS6v3o6khB4
+				https://www.youtube.com/watch?v=_xaZqbnNQKU
+				
 		_Selection Tool: V (para seleccionar y hacer ajustes y cambios generales)
 
 		_Razor Tool: C (serve para cortar ó dividir clips)
